Make Github TextView look like a link

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,5 +2,6 @@
 <resources>
 
     <string name="app_name">BGMStoreMobile</string>
+    <string name="github_link"><a href="https://github.com/kuna/BGMStoreMobile">Github</a></string>
 
 </resources>
